--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon",
-    "start": "node build/app.js"
+    "start": "node build/app.js",
+    "lint": "eslint './**/*.ts' --fix"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +21,13 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/node": "^12.12.3",
+    "@typescript-eslint/eslint-plugin": "^2.6.0",
+    "@typescript-eslint/parser": "^2.6.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "nodemon": "^1.19.4",
+    "prettier": "^1.18.2",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.4"
   }
