--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "dev": "nodemon",
     "start": "node build/app.js",
-    "lint": "eslint './**/*.ts' --fix"
+    "lint": "eslint './**/*.ts'",
+    "lint:fix": "eslint './**/*.ts' --fix"
   },
   "keywords": [],
   "author": "",
@@ -28,9 +29,15 @@
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "husky": "^3.0.9",
     "nodemon": "^1.19.4",
     "prettier": "^1.18.2",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
