--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.21.2",
     "mysql2": "^2.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
+    "@types/helmet": "0.0.45",
     "@types/mysql2": "github:types/mysql2",
     "@types/node": "^12.12.3",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
