--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.0.0",
     "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
@@ -33,6 +34,7 @@
     "@types/mysql2": "github:types/mysql2",
     "@types/node": "^12.12.3",
     "@types/passport": "^1.0.1",
+    "@types/passport-facebook": "^2.1.9",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
