--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-auth-library": "^6.0.0",
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.0.0",
+    "nodemailer": "^6.4.6",
+    "nodemailer-express-handlebars": "^4.0.0",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0",
@@ -36,6 +39,7 @@
     "@types/helmet": "0.0.45",
     "@types/mysql2": "github:types/mysql2",
     "@types/node": "^12.12.3",
+    "@types/nodemailer": "^6.4.0",
     "@types/passport": "^1.0.1",
     "@types/passport-facebook": "^2.1.9",
     "@types/passport-jwt": "^3.0.3",
