--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/helmet": "0.0.45",
+    "@types/mysql": "^2.15.13",
     "@types/mysql2": "github:types/mysql2",
     "@types/node": "^12.12.3",
     "@types/nodemailer": "^6.4.0",
